ui: render invoices in ui

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,13 @@
 h1 {
     color: hotpink;
     font-family: cursive;
-  }
+}
+
+.report {
+  border: thin solid rebeccapurple;
+  padding: 20px;
+}
+
+p {
+  border-bottom: thin solid grey;
+}
